--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
             justify-content: space-between;
 
         }
+
         span {
-          font-size: 40px;
-          text-align: center;
-          background-color: blue;
-          color: yellow;
-          margin: 10px;
+            font-size: 40px;
+            text-align: center;
+            background-color: blue;
+            color: yellow;
+            margin: 10px;
 
 
         }
@@ -29,7 +30,12 @@
 </head>
 <body>
 <div class="block">
-  <span>1</span><span>2</span><span>3</span>
+    <span>1</span>
+    <span>2</span>
+    <span>3</span>
+    <span>4</span>
+    <span>5</span>
+    <span>6</span>
 </div>
 
 </body>
