--- a/index.html
+++ b/index.html
@@ -4,39 +4,42 @@
     <meta charset="UTF-8">
     <title>DemoSite</title>
     <style>
-        .block {
-            background-color: aquamarine;
-            width: 200px;
-            height: 200px;
-            border: 7px solid black;
-            border-radius: 15px;
-            padding: 50px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-
+        .layer {
+            overflow: scroll; /* Добавляем полосы прокрутки */
+            width: 300px; /* Ширина блока */
+            height: 400px; /* Высота блока */
+            padding: 5px; /* Поля вокруг текста */
+            border: solid 1px black; /* Параметры рамки */
+            border-radius: 10px;
+            background-color: burlywood;
         }
-
-        span {
-            font-size: 40px;
-            text-align: center;
-            background-color: blue;
-            color: yellow;
-            margin: 10px;
-
-
+        h1 {
+            background-color: bisque;
+        }
+        p {
+background-color: coral;
         }
     </style>
 </head>
 <body>
-<div class="block">
-    <span>1</span>
-    <span>2</span>
-    <span>3</span>
-    <span>4</span>
-    <span>5</span>
-    <span>6</span>
+<div class="layer">
+    <h1>Duis te feugifacilisi</h1>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem
+        nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat.
+        Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit
+        lobortis nisl ut aliquip ex ea commodo consequat.</p>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem
+        nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat.
+        Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit
+        lobortis nisl ut aliquip ex ea commodo consequat.</p>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem
+        nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat.
+        Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit
+        lobortis nisl ut aliquip ex ea commodo consequat.</p>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem
+        nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat.
+        Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit
+        lobortis nisl ut aliquip ex ea commodo consequat.</p>
 </div>
-
 </body>
 </html>
