--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <style>
         .layer {
             overflow: scroll; /* Добавляем полосы прокрутки */
-            width: 3000px; /* Ширина блока */
+            width: 300px; /* Ширина блока */
             height: 400px; /* Высота блока */
             padding: 5px; /* Поля вокруг текста */
             border: solid 1px black; /* Параметры рамки */
             border-radius: 10px;
             background-color: burlywood;
         }
+        .layer:hover{
+
+        }
         h1 {
-            background-color: bisque;
+            background-color: #ecb429;
         }
         p {
 background-color: coral;
