--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             background-color: burlywood;
         }
         .layer:hover{
+            background-color: blue;
 
         }
         h1 {
