--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <style>
         .layer {
             overflow: scroll; /* Добавляем полосы прокрутки */
-            width: 300px; /* Ширина блока */
-            height: 400px; /* Высота блока */
-            padding: 5px; /* Поля вокруг текста */
+            width: 100vw; /* Ширина блока */
+            height: 100vh; /* Высота блока */
+            padding: 35px; /* Поля вокруг текста */
             border: solid 1px black; /* Параметры рамки */
             border-radius: 10px;
             background-color: burlywood;
+            transition: 2s;
         }
         .layer:hover{
             background-color: blue;
