--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             background-color: firebrick;
 
         }
+        .layer:focus{
+            background-color: fuchsia;
+
+        }
         h1 {
             background-color: #ecb429;
         }
@@ -31,8 +35,8 @@ background-color: coral;
     </style>
 </head>
 <body>
-<div class="layer" contenteditable="true">
-    <h1>Duis te feugifacilisi</h1>
+<div class="layer">
+    <h1>aaaDuis te feugifacilisi</h1>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem
         nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat.
         Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit
