--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ background-color: coral;
 </head>
 <body>
 <div class="layer">
-    <h1>aaaDuis te feugifacilisi</h1>
+    <h1>Duis te feugifacilisi</h1>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem
         nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat.
         Ut wisis enim ad minim veniam, quis nostrud exerci tution ullamcorper suscipit
