--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
             background-color: #85b4e8;
             width: 100vw;
             height: 100vh;
-            font-size: 20px;
+            font-size: 30px;
+            line-height: 50px;
         }
 
         .but{
@@ -18,6 +19,7 @@
             height: 50px;
             margin-top: 50px;
         }
+
 
     </style>
 </head>
